--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body{
-    background-color:blue;
+    background-color:green;
+}
+.container{
+    display:grid;
+    grid-template-columns:1fr 3fr;
+    grid-template-rows:1fr 3fr;
+    border:2px solid red;
+}
+
+.left-column{
+    display:gird;
+    grid-template-columns:1fr;
+    grid-row: span;
+    background-color:lightblue;
 }
