--- a/style.css
+++ b/style.css
@@ -1,16 +1,61 @@
 body{
-    background-color:green;
+    margin:0;
 }
 .container{
+    height:100vh;
     display:grid;
-    grid-template-columns:1fr 3fr;
-    grid-template-rows:1fr 3fr;
+    grid-template-columns:1fr 4fr;
+    grid-template-rows:1fr 4fr;
     border:2px solid red;
 }
 
 .left-column{
-    display:gird;
-    grid-template-columns:1fr;
-    grid-row: span;
+    grid-area:1/1/4/2;
     background-color:lightblue;
+    display:grid;
+    grid-template-rows: 1fr 2fr;
+    border:2px solid green;
+}
+h1{
+    gap:10px;
+}
+
+img{
+    height:25px;
+    width:25px;
+    align-self:center;
+    justify-self:center;
+}
+
+.left-column> .item{
+    border:2px solid green;
+}
+
+
+
+.list{ 
+    list-style-type:none;
+    display:grid;
+    border: 2px solid blue;
+    grid-template-rows:repeat(1fr,6);
+    align-items:center;
+    gap: 15px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size:22px;
+    padding-left:75px;
+    
+}
+
+.topright{
+    grid-area:1 / 2 / 1 / 3;
+    background-color:gray;
+}
+.bottomright{
+    grid-row-start:2;
+    grid-column-start:2;
+    background-color:mediumaquamarine;
+}
+
+.container>div{
+    border:2px red solid;
 }
