--- a/style.css
+++ b/style.css
@@ -18,13 +18,15 @@ body{
 }
 h1{
     gap:10px;
+    text-align:center;
 }
 
 img{
-    height:25px;
-    width:25px;
+    height:20px;
+    width:20px;
     align-self:center;
     justify-self:center;
+    
 }
 
 .left-column> .item{
@@ -32,7 +34,13 @@ img{
 }
 
 
-
+li{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    gap:3px;
+    margin-right:auto;
+}
 .list{ 
     list-style-type:none;
     display:grid;
@@ -45,7 +53,11 @@ img{
     padding-left:75px;
     
 }
-
+#one{
+    display:grid;
+    grid-template-rows:repeat(1fr, 6);
+    
+}
 .topright{
     grid-area:1 / 2 / 1 / 3;
     background-color:gray;
