--- a/style.css
+++ b/style.css
@@ -9,12 +9,24 @@ body{
     border:2px solid red;
 }
 
+.title{
+    display:flex;
+    margin-left:10px;
+}
+
+#title{
+    height:40px;
+    width:40px;
+}
 .left-column{
     grid-area:1/1/4/2;
     background-color:lightblue;
     display:grid;
     grid-template-rows: 1fr 2fr;
     border:2px solid green;
+    background-color:rgb(45, 151, 227);
+    color:white;
+    font-weight:500;
 }
 h1{
     gap:10px;
@@ -26,6 +38,7 @@ img{
     width:20px;
     align-self:center;
     justify-self:center;
+    color:white;
     
 }
 
@@ -44,13 +57,12 @@ li{
 .list{ 
     list-style-type:none;
     display:grid;
-    border: 2px solid blue;
     grid-template-rows:repeat(1fr,6);
-    align-items:center;
+    align-items:left;
     gap: 15px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size:22px;
-    padding-left:75px;
+    padding-left:40px;
     
 }
 #one{
@@ -59,8 +71,11 @@ li{
     
 }
 .topright{
+    grid-template-columns:1.7fr 1fr;
     grid-area:1 / 2 / 1 / 3;
     background-color:gray;
+    display:grid;
+    grid-template-rows:1fr 1fr;
 }
 .bottomright{
     grid-row-start:2;
@@ -70,4 +85,24 @@ li{
 
 .container>div{
     border:2px red solid;
+}
+.item1, .item2, .item3, .item4{
+    border:goldenrod 2px solid;
+}
+
+.item1{
+    background-color:white;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    gap:20px;    
+}
+
+input[type="text"]{
+    border-radius:10px;
+    width:500px;
+    background-color:rgb(231, 235, 238);
+    margin:0px;
+    border:none;
+    height:22px;
 }
