--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     margin:0;
+    height:100vh;
+    width:100vw;
 }
 .container{
     height:100vh;
@@ -76,11 +78,10 @@ li{
 .bottomright{
     grid-row-start:2;
     grid-column-start:2;
-    background-color:mediumaquamarine;
+    background-color:rgb(218, 225, 222);
 }
 
-.container>div{
-}
+
 .item1, .item2, .item3, .item4{
     background-color:white;
 
@@ -176,5 +177,57 @@ button{
 }
 .bottom-right>div{
     border:gray 2px solid;
+    gap:10px;
 }
 
+.cardgrid{
+    display:grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns:1fr 1fr;
+    gap:40px;
+    margin-right:15px;
+    margin-bottom:10px;
+}
+
+
+.card{
+    padding-left:5px;
+    border:2px solid orange;
+    background-color:rgb(252, 251, 251);
+    box-shadow: -7px 0px 2px 0px yellow;
+    border-radius:5px;
+    display:grid;
+    grid-template-rows:1fr .25fr;
+    
+}
+
+.subannounce1, .subannounce2{
+    border:2px solid green;
+}
+
+.toprow{
+    margin:15px;
+}
+p{
+    margin-top:-20px;
+    
+    
+}
+
+.announcements{
+    display:grid;
+    grid-template-rows:1fr 1fr;
+    grid-template-columns:1fr;
+    gap:10px;
+    margin-right:15px;
+    margin-bottom:10px;
+}
+
+.bottomrow{
+    display:flex;
+    flex-direction:row;
+    justify-content:flex-end;
+    align-items:flex-end;
+    margin-right:10px;
+    gap:15px;
+}
