--- a/style.css
+++ b/style.css
@@ -39,11 +39,7 @@ img{
     align-self:center;
     justify-self:center;
     color:white;
-    
 }
-
-
-
 
 li{
     display:flex;
@@ -74,6 +70,8 @@ li{
     background-color:gray;
     display:grid;
     grid-template-rows:1fr 1fr;
+    margin-bottom:5px;
+    box-shadow:0px 5px 5px 0px gray;
 }
 .bottomright{
     grid-row-start:2;
@@ -81,12 +79,10 @@ li{
     background-color:rgb(218, 225, 222);
 }
 
-
 .item1, .item2, .item3, .item4{
     background-color:white;
 
 }
-
 .item1{
     background-color:white;
     display:flex;
@@ -166,7 +162,6 @@ button{
     font-size:12px;
     border-radius:20px;
     border:none;
-
 }
 
 .bottomright{
@@ -174,12 +169,12 @@ button{
     grid-template-rows:1fr 8fr;
     grid-template-columns:2fr 1fr;
     padding-left:24px;
-}
-.bottom-right>div{
-    border:gray 2px solid;
-    gap:10px;
+    margin:0px;
 }
 
+.bottomright h3{
+    margin-bottom:-10px;
+}
 .cardgrid{
     display:grid;
     grid-template-rows: 1fr 1fr 1fr;
@@ -187,31 +182,29 @@ button{
     gap:40px;
     margin-right:15px;
     margin-bottom:10px;
+    margin-top:-40px;
 }
 
 
 .card{
     padding-left:5px;
-    border:2px solid orange;
     background-color:rgb(252, 251, 251);
-    box-shadow: -7px 0px 2px 0px yellow;
+    box-shadow: 0px 2px 2px 0px gray;
+    border-left:4px yellow solid;
     border-radius:5px;
     display:grid;
     grid-template-rows:1fr .25fr;
     
 }
 
-.subannounce1, .subannounce2{
-    border:2px solid green;
-}
+
 
 .toprow{
     margin:15px;
 }
+
 p{
     margin-top:-20px;
-    
-    
 }
 
 .announcements{
@@ -221,6 +214,7 @@ p{
     gap:10px;
     margin-right:15px;
     margin-bottom:10px;
+    margin-top:-44px;
 }
 
 .bottomrow{
@@ -230,4 +224,62 @@ p{
     align-items:flex-end;
     margin-right:10px;
     gap:15px;
+}
+
+.subannounce1{
+    display:flex;
+    flex-direction:column;
+    margin:5px;
+    background-color:white;
+    font-size:16px;
+    border-radius:15px;
+}
+
+.box{
+    display:flex;
+    justify-content:center;
+    flex-direction:column;
+    align-items:flex-start;
+    margin-left:60px;
+    width:250px;
+    border:none;
+}
+
+#boxy{
+    box-shadow:0px 2px 0px 0px gray;
+
+}
+.subannounce2{
+    background-color:white;
+    display:grid;
+    margin:5px;
+    grid-template-rows:repeat(1fr,5);
+    grid-template-columns:1fr 3fr;
+    border-radius:20px;
+}
+.trending{
+    grid-area:1/1/2/3;
+    background-color:rgb(218, 225, 222);
+    font-size:20px;
+    font-weight:700;
+
+    
+}
+.subannounce2 img{
+    height:40px;
+    width:40px;
+}
+
+.box1, .box3, .box5, .box7{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+
+#head{
+    margin-left:20px;
+}
+
+.box1 .box2{
+    border-radius:15x;
 }
